--- a/index.html
+++ b/index.html
@@ -599,10 +599,22 @@
                 <div class="mobileDevices__aboutPhone_text">Qisi enim ad minim veniam, quits nostrud exerci tation ullamcorper suscipit lobortis nisl ul aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem mogo typi, qui
                     nunc nobis videntur parum clari, fiant sollemnes in futurum</div>
                 <div class="mobileDevices__aboutPhone_list">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="mobileDevices__aboutPhone_list-item">
+                        <div class="mobileDevices__aboutPhone_list-item-symbol"></div>
+                        <div class="mobileDevices__aboutPhone_list-item-par">Nam liber tempor cum soluta nobis eleifend option;</div>
+                    </div>
+                    <div class="mobileDevices__aboutPhone_list-item">
+                        <div class="mobileDevices__aboutPhone_list-item-symbol"></div>
+                        <div class="mobileDevices__aboutPhone_list-item-par">Option congue nihil imperdient doming id quod mazim placerat facer;</div>
+                    </div>
+                    <div class="mobileDevices__aboutPhone_list-item">
+                        <div class="mobileDevices__aboutPhone_list-item-symbol"></div>
+                        <div class="mobileDevices__aboutPhone_list-item-par">Eodem modo typi, qui nunc nobis videntur parum futurum;</div>
+                    </div>
+                    <div class="mobileDevices__aboutPhone_list-item">
+                        <div class="mobileDevices__aboutPhone_list-item-symbol"></div>
+                        <div class="mobileDevices__aboutPhone_list-item-par">Investigationes demonstraverunt lectores</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -613,31 +625,31 @@
                 <div class="statics__clients_icon"></div>
                 <div class="statics__clients_quantity">3587</div>
                 <div class="statics__clients_name">SATISFIED CLIENTS</div>
-                <div></div>
+                <div class="statics__clients_line"></div>
             </div>
             <div class="statics__coffe">
                 <div class="statics__coffe_icon"></div>
                 <div class="statics__coffe_quantity">207</div>
                 <div class="statics__coffe_name">CUPS OF COFFE</div>
-                <div></div>
+                <div class="statics__coffe_line"></div>
             </div>
             <div class="statics__blogPosts">
                 <div class="statics__blogPosts_icon"></div>
                 <div class="statics__blogPosts_quantity">2500</div>
                 <div class="statics__blogPosts_name">BLOG POSTS</div>
-                <div></div>
+                <div class="statics__blogPosts_line"></div>
             </div>
             <div class="statics__likes">
                 <div class="statics__likes_icon"></div>
                 <div class="statics__likes_quantity">873</div>
                 <div class="statics__likes_name">LIKES</div>
-                <div></div>
+                <div class="statics__likes_line"></div>
             </div>
             <div class="statics__launch">
                 <div class="statics__launch_icon"></div>
                 <div class="statics__launch_quantity">900</div>
                 <div class="statics__launch_name">WE LAUNCHED</div>
-                <div></div>
+                <div class="statics__launch_line"></div>
             </div>
         </div>
     </div>
