--- a/index.html
+++ b/index.html
@@ -655,9 +655,34 @@
     </div>
     <div class="recentPosts__wrapper">
         <div class="recentPosts">
-            <div class="recentPosts__caption"></div>
-            <div class="recentPosts__text"></div>
-            <div class="recentPosts__list"></div>
+            <div class="recentPosts__caption">Recent Posts.</div>
+            <div class="recentPosts__text">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</div>
+            <div class="recentPosts__slaidImage">
+                <div class="recentPosts__slaidImage_men">
+                        <div class="recentPosts__slaidImage_men_image"></div>
+                        <div class="recentPosts__slaidImage_men_text">
+                            <div class="recentPosts__slaidImage_men_text-caption">Lorem ipsum dolor sit amet</div>
+                            <div class="recentPosts__slaidImage_men_text-aboutThis">Claritas est eltiam processus dynamicus, qui sequitur mutationem consuetudium.</div>
+                            <div class="recentPosts__slaidImage_men_text-moreInf">Read more</div>
+                        </div>
+                </div>
+                <div class="recentPosts__slaidImage_women">
+                    <div class="recentPosts__slaidImage_women_image"></div>
+                    <div class="recentPosts__slaidImage_women_text">
+                        <div class="recentPosts__slaidImage_women_text-caption">Lorem ipsum dolor sit amet</div>
+                        <div class="recentPosts__slaidImage_women_text-aboutThis">Claritas est eltiam processus dynamicus, qui sequitur mutationem consuetudium.</div>
+                        <div class="recentPosts__slaidImage_women_text-moreInf">Read more</div>
+                    </div>
+                </div>
+                <div class="recentPosts__slaidImage_ship">
+                    <div class="recentPosts__slaidImage_ship_image"></div>
+                    <div class="recentPosts__slaidImage_ship_text">
+                        <div class="recentPosts__slaidImage_ship_text-caption">Lorem ipsum dolor sit amet</div>
+                        <div class="recentPosts__slaidImage_ship_text-aboutThis">Claritas est eltiam processus dynamicus, qui sequitur mutationem consuetudium.</div>
+                        <div class="recentPosts__slaidImage_ship_text-moreInf">Read more</div>
+                    </div>
+            </div>
+            </div>
         </div>
     </div>
     <div class="sponsors__wrapper">
@@ -668,21 +693,65 @@
             <div class="sponsors__royal"></div>
         </div>
     </div>
-    <div class="dontKnow">
-        <div>
-
+    <div class="upperFooter__wrapper">
+        <div class="upperFooter">
+            <div class="upperFooter__aboutWaxon">
+                <div class="upperFooter__aboutWaxon_caption"></div>
+                <div class="upperFooter__aboutWaxon_text">Lorem ipsum dolor sit amet,consectetuer adipiscing elit sed diam nonummy nibh eusimod tincidunt ut laoreet dolore magna aliquip erat volutpat. Ut wisi enim ad minim veniam, quim nostrud exerci suscipit lobortis claritatem</div>
+                <div class="upperFooter__aboutWaxon_more">Read More</div>
+            </div>
+            <div class="upperFooter__recentPosts">
+                <div class="upperFooter__recentPosts_caption">Recent Posts</div>
+                <div class="upperFooter__recentPosts_post">
+                    <div class="upperFooter__recentPosts_post-date">September 08, 2015</div>
+                    <div class="upperFooter__recentPosts_post-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</div>
+                </div>
+                <div class="upperFooter__recentPosts_post">
+                    <div class="upperFooter__recentPosts_post-date">September 08, 2015</div>
+                    <div class="upperFooter__recentPosts_post-text">Diam nonummy nibh eusimod tincidunt ut laoreet dolore magna</div>
+                </div>
+                <div class="upperFooter__recentPosts_post">
+                    <div class="upperFooter__recentPosts_post-date">September 08, 2015</div>
+                    <div class="upperFooter__recentPosts_post-text">Claritas est etlam processus dynamicus, qui sequitur mutationem per seacula quarta decima</div>
+                </div>
+            </div>
+            <div class="upperFooter__twitter">
+                <div class="upperFooter__twitter_caption">Our Twitter</div>
+                <div class="upperFooter__twitter_twett">
+                    <div class="upperFooter__twitter_twett-text"><a class="upperFooter__twitter_twett-text-link">@waxom</a> Cum soluta nobis eleifend option congue nihil imperdient doming</div>
+                    <div class="upperFooter__twitter_twett-date">3 mins ago</div> 
+                </div>
+                <div class="upperFooter__twitter_twett">
+                    <div class="upperFooter__twitter_twett-text">Mirum est <a class="upperFooter__twitter_twett-text-link">#envato</a> notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum</div>
+                    <div class="upperFooter__twitter_twett-date">5 hours ago</div> 
+                </div>
+                <div class="upperFooter__twitter_twett">
+                    <div class="upperFooter__twitter_twett-text">Soluta nobis option <a class="upperFooter__twitter_twett-text-linkWhite">bit.ly/lHniso7</a></div>
+                    <div class="upperFooter__twitter_twett-date">20 days ago</div> 
+                </div>
+            </div>
+            <div class="upperFooter__widget">
+                <div class="upperFooter__widget_caption">Dribble Widget</div>
+                <div class="upperFooter__widget_gallery">
+                    <div class="upperFooter__widget_gallery-doublePhone"></div>
+                    <div class="upperFooter__widget_gallery-paper"></div>
+                    <div class="upperFooter__widget_gallery-smallJournal"></div>
+                    <div class="upperFooter__widget_gallery-pinkIcon"></div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="footer__wrapper">
-        <div class="footer">
-            <div class="footer__contact">
-                <div>Copyright &copy; 2015 Waxom</div>
-                <div>Privacy Policy</div>
-                <div>FAQ</div>
-                <div>Support</div>
+    <div class="lowerFooter__wrapper">
+        <div class="lowerFooter">
+            <div class="lowerFooter__contact">
+                <div class="lowerFooter__contact_items">Copyright &copy; 2015 <a class="lowerFooter__contact_items-link">Waxom</a></div>
+                <div class="lowerFooter__contact_items">Privacy Policy</div>
+                <div class="lowerFooter__contact_items">FAQ</div>
+                <div class="lowerFooter__contact_items">Support</div>
             </div>
-            <div class="footer__developer">
-
+            <div class="lowerFooter__developer">
+                <div class="lowerFooter__developer_items">Designed by <a class="lowerFooter__developer_items-link">ThemeFire</a></div>
+                <div class="lowerFooter__developer_items">Only on <a class="lowerFooter__developer_items-link">Envato Market</a></div>
             </div>
         </div>
     </div>
